# openMaelstrom

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  readme.md
Configurations/CornerDamBreak/: config.json  houdini.hipnc
Configurations/Corners/: config.json  houdini.hipnc
Configurations/DamBreak/: config.json  houdini.hipnc
Configurations/DamBreakWithRigids/: config.json
Configurations/DragonBreak/: config.json  houdini.hipnc
Configurations/Drop/: config.json  houdini.hipnc
Configurations/Flow/: config.json  houdini.hipnc
Configurations/InitialTest/: config.json  houdini.hipnc
Configurations/Inlet/: config.json  houdini.hipnc
Configurations/LogoBreak/: config.json  houdini.hipnc
Configurations/MediumDamBreak/: config.json  houdini.hipnc
Configurations/OutletTest/: config.json  houdini.hipnc
Configurations/RenderDebug/: config.json  houdini.hipnc
Configurations/RigidTest/: config.json
Configurations/RigidTest2/: config.json
Configurations/Stairs/: config.json  houdini.hipnc
Configurations/SuperDambreak/: config.json  houdini.hipnc
Configurations/Turbine/: Propeller_200x317.stl  config.json  houdini.hipnc
Configurations/Twist/: config.json  houdini.hipnc
Configurations/VMV/: config.json  houdini.hipnc
Configurations/WavePool/: config.json  houdini.hipnc
IO/alembic/: alembic.cpp  alembic.h
IO/config/: config.cpp  config.h  initialize.cpp  initialize.h  parser.h  snapshot.h
IO/particle/: particle.cpp  particle.h
IO/vdb/: vdb.cpp  vdb.h
SPH/DFSPH/: dfsph.cu  dfsph.cuh
SPH/IISPH17/: iisph17.cu  iisph17.cuh
SPH/adaptivity/: AdaptivityDevice.cuh  Blending.cuh  ContinuousAdaptivity.cu  ContinuousAdaptivity.cuh  Merging.cuh  Patterns.cuh  Sharing.cuh  Splitting.cuh
SPH/ancilliary/: sortNeighborList.cu  sortNeighborList.cuh
SPH/boundary/: moving_planes.cu  moving_planes.cuh  volumeBoundary.cpp  volumeBoundary.cu  volumeBoundary.cuh
SPH/compactMLMResort/: compactMLM.cu  compactMLM.cuh
SPH/convection/: AkinciTension.cu  AkinciTension.cuh  BenderVorticity.cu  BenderVorticity.cuh  GisslerDrag.cu  GisslerDrag.cuh  XSPH.cu  XSPH.cuh  gravity.cu  gravity.cuh  monaghanViscosity.cu  monaghanViscosity.cuh
SPH/density/: MLSDensity.cu  MLSDensity.cuh  density.cu  density.cuh  shepardDensity.cu  shepardDensity.cuh
SPH/generation/: particleCleanup.cu  particleCleanup.cuh  volumeInlets.cpp  volumeInlets.cu  volumeInlets.cuh  volumeOutlets.cpp  volumeOutlets.cu  volumeOutlets.cuh
SPH/integration/: simple.cu  simple.cuh
SPH/kernelSupport/: anisotropy.cu  anisotropy.cuh
SPH/neighborhood/: basic_neighborlist.cu  basic_neighborlist.cuh  cell_neighborlist.cu  cell_neighborlist.cuh  compactCellList.cu  compactCellList.cuh  compactNeighborMask.cu  compactNeighborMask.cuh  constrained_neighborlist.cu  constrained_neighborlist.cuh  dummy.cpp  dummy.h  ordered_list.cuh
SPH/pressure/: dfsph.cu  dfsph.cuh  iisph.cu  iisph.cuh  iisph17.cu  iisph17.cuh  iisph17_band_rb.cu  iisph17_band_rb.cuh
SPH/render/: auxilliaryMLM.cu  auxilliaryMLM.cuh  dummy.cpp
SPH/resort/: cluster.cu  cluster.cuh  resort.cu  resort.cuh  resort_mlm.cu  resort_mlm.cuh
SPH/support/: enforce_symmetry.cu  enforce_symmetry.cuh
SPH/surface/: surfaceDetection.cu  surfaceDetection.cuh  surfaceDistance.cu  surfaceDistance.cuh
SPH/visualization/: visualization.cu  visualization.cuh
SPH/vorticity/: BenderVorticity.cu  BenderVorticity.cuh
cfg/: adhesion.lut  cohesion.lut  configs.sph  matplotlib2.mat  offsetLUT.lut  paths.cfg  spiky.lut  spikyGradient.lut  spline.lut  spline2.lut  splineGradient.lut  splineGradientPolar.lut  splinePolar.lut  style.css  volume.lut
cmake/: FindILMBase.cmake  FindOpenEXR.cmake  FindOpenVDB.cmake  FindTBB.cmake  check_cuda.cu  config.h.in
consoleParticles/: main.cpp
documentation/: build.md  config.md  usage.md
gui/: graphwindow.ui  main.cpp  mainwindow.ui
gui/qt/: console.cpp  console.h  delegate.h  docker.cpp  docker.h  mainwindow.cpp  mainwindow.h  propertyviewer.cpp  propertyviewer.h  qgraph.cpp  qgraph.h  timerlistwidget.cpp  timerlistwidget.h
jsonFiles/: adaptive.json  advection.json  boundary.json  coreModels.json  density.json  dfsph.json  iisph.json  iisph17.json  iisph17_band_rb.json  inlet.json  integration.json  neighborhoods.json  parameters.json  rendering.json  structures.json  support.json  surface.json
metaCode/LUTCode/: Source.cpp
metaCode/LUTCode2/: Source.cpp
metaCode/arrays/: main.cpp
metaCode/functions/: main.cpp
metaCode/uniforms/: main.cpp
render/axisRender/: axes.cpp  axes.h
render/boundaryRender/: bounds.cpp  bounds.h
render/colorMapRender/: particle_render.cpp  particle_render.h
render/floorRender/: floor.cpp  floor.h
render/mlmRender/: fluidSystem.cpp  fluidSystem.h  mlmRender.cpp  mlmRender.cu  mlmRender.h  voxelBVH.cpp  voxelBVH.h
render/particleDirectionRender/: particleDirectionRender.cpp  particleDirectionRender.h
render/particleIndexRender/: particleIndexRender.cpp  particleIndexRender.h
render/particleRender/: particle_render.cpp  particle_render.h
render/qGLWidget/: base_renderer.cpp  base_renderer.h  interaction.cpp  oglwidget.cpp  oglwidget.h
render/quadRender/: bvh.h  geometry.cpp  geometry.h  loader.cpp  loader.h  quadRender.cpp  quadRender.cu  quadRender.h
render/rigidRender/: rigid_render.cpp  rigid_render.h
render/util/: camera.cpp  camera.h  color_map.cpp  color_map.h  gl_delegates.h
render/vdbPolyRender/: vdb_poly_render.cpp  vdb_poly_render.h
render/volumeRender/: volume_render.cpp  volume_render.h
render/vrtxRender/: bvh.h  fluidSystem.cpp  fluidSystem.h  geometry.cpp  geometry.h  loader.cpp  loader.h  vrtxRender.cpp  vrtxRender.cu  vrtxRender.h
simulation/: functions.h  particleSystem.cpp  particleSystem.h
utility/: MemoryManager.h  SPH.h  SVD.h  algorithm.h  atomic.h  cuda.h  generation.h  helpers.h  identifier.h  include_all.h  iterator.h  launcher.h  macro.h  math.h  mathv2.h  unit_math.h  volumeBullet.cpp  volumeBullet.h
utility/SPH/: boundaryFunctions.h  indication.h
utility/algorithm/: misc.h  reduce.h  (+2 more)
(+191 files in other folders)
